--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc -w && node out/work.js"
+    "log": "nodemon out/work.js",
+    "start": "tsc -w"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
     "@types/node": "^20.5.7",
-    "chalk": "^5.3.0"
+    "chalk": "^5.3.0",
+    "nodemon": "^3.0.1"
   }
 }
